Fix layout problem on page load

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 .hero-image::after {
   position: absolute;
   top: 0;
-  right: 0;
+  right: 15%;
   bottom: 0;
   left: -15%;
   display: block;
